// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeedList renders correctly 1`] = `
<View>
  <FlatList
    ListFooterComponent={<Loading />}
    ListHeaderComponent={
      <View>
        <React.Fragment>
          <View>
            <ListControl
              onChange={[Function]}
              options={
                Array [
                  Object {
                    "id": "updated",
                    "label": "Latest Activity",
                  },
                  Object {
                    "id": "created",
                    "label": "Post Date",
                  },
                  Object {
                    "id": "votes",
                    "label": "Popular",
                  },
                ]
              }
              selected="latest"
            />
            <ListControl
              onChange={[Function]}
              options={
                Array [
                  Object {
                    "id": null,
                    "label": "All",
                  },
                  Object {
                    "id": "discussion",
                    "label": "Discussions",
                  },
                  Object {
                    "id": "event",
                    "label": "Events",
                  },
                  Object {
                    "id": "offer",
                    "label": "Offers",
                  },
                  Object {
                    "id": "project",
                    "label": "Projects",
                  },
                  Object {
                    "id": "request",
                    "label": "Requests",
                  },
                  Object {
                    "id": "resource",
                    "label": "Resources",
                  },
                ]
              }
              selected="all"
            />
          </View>
        </React.Fragment>
      </View>
    }
    data={
      Array [
        1,
        2,
        3,
      ]
    }
    keyExtractor={[Function]}
    numColumns={1}
    onEndReached={[Function]}
    onRefresh={[Function]}
    refreshing={false}
    removeClippedSubviews={false}
    renderItem={[Function]}
  />
</View>
`;

exports[`ListControl renders correctly 1`] = `
<PopupMenuButton
  actions={
    Array [
      Array [
        "All Posts",
        [Function],
      ],
      Array [
        "Discussions",
        [Function],
      ],
      Array [
        "Requests",
        [Function],
      ],
      Array [
        "Offers",
        [Function],
      ],
      Array [
        "Events",
        [Function],
      ],
    ]
  }
>
  <Text>
    Discussions
  </Text>
  <Icon
    name="ArrowDown"
  />
</PopupMenuButton>
`;

exports[`ListControls renders correctly 1`] = `
<View>
  <ListControl
    onChange={[Function]}
    options={
      Array [
        Object {
          "id": null,
          "label": "All Posts",
        },
        Object {
          "id": "discussion",
          "label": "Discussions",
        },
        Object {
          "id": "request",
          "label": "Requests",
        },
        Object {
          "id": "offer",
          "label": "Offers",
        },
        Object {
          "id": "event",
          "label": "Events",
        },
      ]
    }
    selected="all"
  />
</View>
`;
